--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,10 +147,10 @@ jobs:
           echo "SCCACHE_CACHE_SIZE=30G" >> "$GITHUB_ENV"
           echo "CARGO_INCREMENTAL=0" >> "$GITHUB_ENV"
           mkdir -p /tmp/sccache
-          nix develop -c sccache --stop-server || true
-          nix develop -c sccache --start-server || true
-          nix develop -c sccache --version || true
-          nix develop -c sccache -s || true
+          #nix develop -c sccache --stop-server || true
+          #nix develop -c sccache --start-server || true
+          #nix develop -c sccache --version || true
+          #nix develop -c sccache -s || true
 
       - name: Build
         run: nix develop -c bash -c "cargo build --locked --profile=release"
@@ -500,10 +500,10 @@ jobs:
           echo "SCCACHE_CACHE_SIZE=30G" >> "$GITHUB_ENV"
           echo "CARGO_INCREMENTAL=0" >> "$GITHUB_ENV"
           mkdir -p /tmp/sccache
-          nix develop -c sccache --stop-server || true
-          nix develop -c sccache --start-server || true
-          nix develop -c sccache --version || true
-          nix develop -c sccache -s || true
+          #nix develop -c sccache --stop-server || true
+          #nix develop -c sccache --start-server || true
+          #nix develop -c sccache --version || true
+          #nix develop -c sccache -s || true
 
       - name: Build
         run: nix develop -c bash -c "cargo build --locked --profile=release"
@@ -876,10 +876,10 @@ jobs:
           echo "SCCACHE_CACHE_SIZE=30G" >> "$GITHUB_ENV"
           echo "CARGO_INCREMENTAL=0" >> "$GITHUB_ENV"
           mkdir -p /tmp/sccache
-          nix develop -c sccache --stop-server || true
-          nix develop -c sccache --start-server || true
-          nix develop -c sccache --version || true
-          nix develop -c sccache -s || true
+          #nix develop -c sccache --stop-server || true
+          #nix develop -c sccache --start-server || true
+          #nix develop -c sccache --version || true
+          #nix develop -c sccache -s || true
 
       - name: Build
         run: nix develop -c bash -c "cargo build --locked --profile=release"
