--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -144,13 +144,12 @@ jobs:
           export SCCACHE_CACHE_SIZE=30G
           echo "RUSTC_WRAPPER=sccache" >> "$GITHUB_ENV"
           echo "SCCACHE_DIR=/tmp/sccache" >> "$GITHUB_ENV"
-          echo "SCCACHE_CACHE_SIZE=30G" >> "$GITHUB_ENV"
+          echo "SCCACHE_CACHE_SIZE=0" >> "$GITHUB_ENV"
           echo "CARGO_INCREMENTAL=0" >> "$GITHUB_ENV"
           mkdir -p /tmp/sccache
-          #nix develop -c sccache --stop-server || true
-          #nix develop -c sccache --start-server || true
-          #nix develop -c sccache --version || true
-          #nix develop -c sccache -s || true
+          nix develop -c sccache --stop-server || true
+          nix develop -c sccache --start-server || true
+          nix develop -c sccache --version || true
 
       - name: Build
         run: nix develop -c bash -c "cargo build --locked --profile=release"
@@ -497,13 +496,12 @@ jobs:
           export SCCACHE_CACHE_SIZE=30G
           echo "RUSTC_WRAPPER=sccache" >> "$GITHUB_ENV"
           echo "SCCACHE_DIR=/tmp/sccache" >> "$GITHUB_ENV"
-          echo "SCCACHE_CACHE_SIZE=30G" >> "$GITHUB_ENV"
+          echo "SCCACHE_CACHE_SIZE=0" >> "$GITHUB_ENV"
           echo "CARGO_INCREMENTAL=0" >> "$GITHUB_ENV"
           mkdir -p /tmp/sccache
-          #nix develop -c sccache --stop-server || true
-          #nix develop -c sccache --start-server || true
-          #nix develop -c sccache --version || true
-          #nix develop -c sccache -s || true
+          nix develop -c sccache --stop-server || true
+          nix develop -c sccache --start-server || true
+          nix develop -c sccache --version || true
 
       - name: Build
         run: nix develop -c bash -c "cargo build --locked --profile=release"
@@ -873,13 +871,12 @@ jobs:
           export SCCACHE_CACHE_SIZE=30G
           echo "RUSTC_WRAPPER=sccache" >> "$GITHUB_ENV"
           echo "SCCACHE_DIR=/tmp/sccache" >> "$GITHUB_ENV"
-          echo "SCCACHE_CACHE_SIZE=30G" >> "$GITHUB_ENV"
+          echo "SCCACHE_CACHE_SIZE=0" >> "$GITHUB_ENV"
           echo "CARGO_INCREMENTAL=0" >> "$GITHUB_ENV"
           mkdir -p /tmp/sccache
-          #nix develop -c sccache --stop-server || true
-          #nix develop -c sccache --start-server || true
-          #nix develop -c sccache --version || true
-          #nix develop -c sccache -s || true
+          nix develop -c sccache --stop-server || true
+          nix develop -c sccache --start-server || true
+          nix develop -c sccache --version || true
 
       - name: Build
         run: nix develop -c bash -c "cargo build --locked --profile=release"
