Try Swatinem/rust-cache

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,21 +142,11 @@ jobs:
         with:
           registry: ${{ secrets.ECR_REGISTRY_SECRET }}
 
-      - name: Enable sccache (RUSTC_WRAPPER)
-        run: |
-          set -e
-          if nix develop -c bash -lc 'command -v sccache' >/dev/null 2>&1; then
-            echo "RUSTC_WRAPPER=sccache" >> "$GITHUB_ENV"
-            echo "SCCACHE_DIR=/tmp/sccache" >> "$GITHUB_ENV"
-            echo "SCCACHE_CACHE_SIZE=30G" >> "$GITHUB_ENV"
-            echo "CARGO_INCREMENTAL=0" >> "$GITHUB_ENV"
-            mkdir -p /tmp/sccache
-            nix develop -c sccache --stop-server || true
-            nix develop -c sccache --start-server || true
-            nix develop -c sccache --version || true
-          else
-            echo "sccache not in devshell; skipping wrapper."
-          fi
+      - uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: "v0-rust"
+          save-if: "true"
+          cache-workspace-crates: "true"
 
       - name: Formatting
         run: nix develop -c bash -c "cargo fmt --check"
@@ -169,10 +159,6 @@ jobs:
 
       - name: Lint
         run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --locked --release --all-features"
-
-      - name: sccache stats
-        if: always()
-        run: nix develop -c sccache -s || true
 
       - name: Acquire cache lock
         run: |
@@ -883,21 +869,11 @@ jobs:
         with:
           registry: ${{ secrets.ECR_REGISTRY_SECRET }}
 
-      - name: Enable sccache (RUSTC_WRAPPER)
-        run: |
-          set -e
-          if nix develop -c bash -lc 'command -v sccache' >/dev/null 2>&1; then
-            echo "RUSTC_WRAPPER=sccache" >> "$GITHUB_ENV"
-            echo "SCCACHE_DIR=/tmp/sccache" >> "$GITHUB_ENV"
-            echo "SCCACHE_CACHE_SIZE=30G" >> "$GITHUB_ENV"
-            echo "CARGO_INCREMENTAL=0" >> "$GITHUB_ENV"
-            mkdir -p /tmp/sccache
-            nix develop -c sccache --stop-server || true
-            nix develop -c sccache --start-server || true
-            nix develop -c sccache --version || true
-          else
-            echo "sccache not in devshell; skipping wrapper."
-          fi
+      - uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: "v0-rust"
+          save-if: "true"
+          cache-workspace-crates: "true"
 
       - name: Formatting
         run: nix develop -c bash -c "cargo fmt --check"
@@ -910,10 +886,6 @@ jobs:
 
       - name: Lint
         run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --locked --release --all-features"
-
-      - name: sccache stats
-        if: always()
-        run: nix develop -c sccache -s || true
 
       - name: Acquire cache lock
         run: |
