add: ETCM-12255 bridge data source

--- a/demo/node/Cargo.toml
+++ b/demo/node/Cargo.toml
@@ -101,6 +101,7 @@ partner-chains-db-sync-data-sources = { workspace = true, features = [
 	"mc-hash",
 	"sidechain-rpc",
 	"block-participation",
+	"bridge",
 ] }
 partner-chains-mock-data-sources = { workspace = true, features = [
 	"block-source",
