--- a/toolkit/data-sources/db-sync/Cargo.toml
+++ b/toolkit/data-sources/db-sync/Cargo.toml
@@ -53,8 +53,8 @@ sp-block-participation = { workspace = true, features = [
 
 [dev-dependencies]
 tokio-test = "0.4.3"
-ctor = "0.4.1"
-testcontainers-modules = { version = "0.1.3", features = ["postgres"] }
+ctor = "0.5.0"
+testcontainers-modules = { version = "0.13.0", features = ["blocking", "postgres"] }
 pretty_assertions = { workspace = true }
 paste = { workspace = true }
 
