Replace native-token with bridge chain spec building in wizards. Add from_env bridge chain-spec building. Make governed-map same as other pallets.

--- a/dev/envs/ci-preview/.envrc
+++ b/dev/envs/ci-preview/.envrc
@@ -4,12 +4,16 @@ export COMMITTEE_CANDIDATE_ADDRESS=$(jq -r '.addresses.CommitteeCandidateValidat
 export D_PARAMETER_POLICY_ID=$(jq -r '.policyIds.DParameter' dev/envs/ci-preview/addresses.json)
 export PERMISSIONED_CANDIDATES_POLICY_ID=$(jq -r '.policyIds.PermissionedCandidates' dev/envs/ci-preview/addresses.json)
 export ILLIQUID_SUPPLY_VALIDATOR_ADDRESS=$(jq -r '.addresses.IlliquidCirculationSupplyValidator' dev/envs/ci-preview/addresses.json)
+export ILLIQUID_CIRCULATION_SUPPLY_VALIDATOR_ADDRESS=$(echo $ILLIQUID_SUPPLY_VALIDATOR_ADDRESS)
 export GOVERNED_MAP_VALIDATOR_ADDRESS=$(jq -r '.addresses.GovernedMapValidator' dev/envs/ci-preview/addresses.json)
 export GOVERNED_MAP_POLICY_ID=$(jq -r '.policyIds.GovernedMap' dev/envs/ci-preview/addresses.json)
 
 # native token observability
 export NATIVE_TOKEN_POLICY_ID='ada83ddd029614381f00e28de0922ab0dec6983ea9dd29ae20eef9b4'
 export NATIVE_TOKEN_ASSET_NAME='5043546f6b656e44656d6f'
+# bridge token
+export BRIDGE_TOKEN_POLICY_ID=$(echo $NATIVE_TOKEN_POLICY_ID)
+export BRIDGE_TOKEN_ASSET_NAME=$(echo $NATIVE_TOKEN_ASSET_NAME)
 
 # Preview parameters
 . dev/envs/preview-exports.sh
