refactor: improve Jolteon consensus tests with block-based analysis and time-based monitoring
- Refactor consensus tests from time-based waiting to efficient block-based analysis
- Add shared helper function for consensus state collection across multiple RPC endpoints
- Fix test_jolteon_advanced.py safety properties test to require minimum 3 blocks for meaningful validation
- Rewrite test_jolteon_consensus_rpc.py with proper syntax and time-based progression monitoring
- Update pytest.ini to register custom markers (jolteon, consensus, advanced)
- Improve error handling and logging for expected behaviors (duplicate block samples)
- Ensure tests properly validate consensus progression over time rather than static state

--- a/e2e-tests/pytest.ini
+++ b/e2e-tests/pytest.ini
@@ -10,6 +10,11 @@ markers =
     governed_map: arbitrary data stored on the main chain
     delegator_rewards: ADA delegator rewards
     
+    # Jolteon consensus marks
+    jolteon: Jolteon consensus algorithm tests
+    consensus: consensus-related tests
+    advanced: advanced consensus tests
+    
     # helper tags
     skip_on_new_chain: skip test on new chain (less than 2 MC epochs have passed)
     candidate_status: active or inactive, used in test_registrations.py
